--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "doc": "docs"
   },
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/nestengineering/skeleton/issues"
   },
-  "homepage": "https://github.com/nestengineering/skeleton#readme"
+  "homepage": "https://github.com/nestengineering/skeleton#readme",
+  "devDependencies": {
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.4",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
+  }
 }
