--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,9 +24,10 @@
   },
   "homepage": "https://github.com/nestengineering/skeleton#readme",
   "devDependencies": {
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.2.4",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1"
+    "rollup": "^1.1.2",
+    "rollup-plugin-typescript": "^1.0.0",
+    "tslint": "^5.12.1",
+    "tslint-config-airbnb": "^5.11.1",
+    "typescript": "^3.2.4"
   }
 }
