finish build script

--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
     "node": "10.15.0"
   },
   "description": "Abstract model of the front end",
-  "main": "index.js",
+  "main": "dist/skeleton.cjs.js",
+  "module": "dist/skeleton.esm.js",
+  "browser": "dist/skeleton.umd.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
     "build": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "rollup -c -w",
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -r ts-node/register test/**/*.ts",
+    "pretest": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,10 +28,17 @@
   },
   "homepage": "https://github.com/nestengineering/skeleton#readme",
   "devDependencies": {
-    "rollup": "^1.1.2",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "rollup": "^1.0.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-typescript": "^1.0.0",
-    "tslint": "^5.12.1",
-    "tslint-config-airbnb": "^5.11.1",
+    "ts-node": "^7.0.1",
+    "tslib": "^1.9.3",
     "typescript": "^3.2.4"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
