--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^3.2.4"
   },
   "dependencies": {
-    "@types/node": "^10.12.18"
+    "@types/node": "^10.12.18",
+    "ejs": "^2.6.1"
   }
 }
