--- a/package.json
+++ b/package.json
@@ -21,14 +21,11 @@
   },
   "homepage": "https://github.com/nestengineering/skeleton#readme",
   "devDependencies": {
-    "@types/ejs": "^2.6.1",
     "@types/node": "^10.12.20",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "opener": "^1.5.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.4"
-  },
-  "dependencies": {
-    "ejs": "^2.6.1"
   }
 }
