--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "Abstract model of the front end",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc --module commonjs --outDir dist src/index.ts",
+    "build": "tsc",
     "test": "mocha -r ts-node/register tests/**/*.test.ts"
   },
   "repository": {
